--- a/EventDrivenLoadBalancer3/pom.xml
+++ b/EventDrivenLoadBalancer3/pom.xml
@@ -14,6 +14,13 @@
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
+          <archive>
+	          <manifest>
+	            <addClasspath>true</addClasspath>
+	            <classpathPrefix>lib/</classpathPrefix>
+	            <mainClass>eventDrivenLoadBalancer3.server.ServerMain</mainClass>
+	          </manifest>
+	        </archive>
         </configuration>
       </plugin>
     </plugins>
